--- a/inscricao.html
+++ b/inscricao.html
@@ -205,15 +205,42 @@
         </div>
         <button type="submit" class="btn btn-primary btn-lg">Contratar Plano</button>
         <!-- PAGAMENTO FIM -->
-
       </form>
+
+      <div class="col-lg-5 mx-auto order-first order-lg-1 mb-5">
+        <h3 class="h6 text-primary">PLANO ESCOLHIDO</h3>
+        <div class="bg-light rounded p-4 shadow">
+          <h2>GOLD</h2>
+          <ul class="lista-plano list-unstyled">
+            <li>→ 30 dias de viagem</li>
+            <li>→ 3 destinos diferentes</li>
+            <li>→ Tudo pago pela empresa</li>
+            <li>→ Ingressos para festas</li>
+          </ul>
+          <form>
+            <div class="form-group">
+              <select class="form-control bg-light">
+                <option>Selecione a cidade</option>
+                <option>California</option>
+                <option>Paris</option>
+                <option>Dublin</option>
+              </select>
+            </div>
+          </form>
+          <div class="row mt-4">
+            <div class="col">
+              <span class="h4">R$5.000</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- INSCREVA-SE FIM -->
 
   <!-- RODAPÉ INICIO -->
-  <footer class="bg-dark text-white my-5">
+  <footer class="bg-dark text-white mt-5">
     <div class="container py-5">
       <div class="row">
         <div class="col-6 col-md-3">
